tests/compile_fail/non_string.rs
fn main() {
    // Pass an integer instead of a string
    let _: &str = read_doc::module!(123);
}
