tests/compile_fail/non_string.stderr
error: expected string literal
 --> tests/compile_fail/non_string.rs:3:37
  |
3 |     let _: &str = read_doc::module!(123);
  |                                     ^^^
